加入了刘志军的solr系列的内容

--- a/07/0725.md
+++ b/07/0725.md
@@ -22,5 +22,25 @@
 
 今天主要做这些事情。清华大学老师的视频下载到本地然后去看去学习。
 
+<br/>
+
+### 深夜11点
+
+学习了刘志军的讲解Lucene的例子，如下：
+
+#### 全文检索Solr
+
+
+1. [全文检索引擎Solr入门](http://www.importnew.com/12607.html)
+2. [全文检索基本篇](http://www.importnew.com/12707.html)
+3. [Solr核心概念和配置](http://www.importnew.com/12770.html)
+4. [整合中文分词组件mmseg4j](http://www.importnew.com/12860.html)
+5. [整合中文分词组件IKAnalyzer](http://www.importnew.com/12918.html)
+6. [整合MySQL、MongoDB](http://www.importnew.com/13068.html)
+
+刘志军的blog的地址：
+[http://www.importnew.com/author/liuzhijun](http://www.importnew.com/author/liuzhijun)
+
+
 
 
