添加了对solr系列文章的看法

--- a/07/0725.md
+++ b/07/0725.md
@@ -41,6 +41,10 @@
 刘志军的blog的地址：
 [http://www.importnew.com/author/liuzhijun](http://www.importnew.com/author/liuzhijun)
 
+看完上述一系列的内容，感觉一般。虽然这几天没怎么看的那么细致。但是还是觉得写得不好。而且表达也不是很熟练，能直接说出内容。
 
+我要写的话会按照上面那个麦子学院那个老师的方式给写在这个blog上。
+
+OK，今天就先写这些吧。明天安好。开始撸代码。
 
 
