add git remove repo file

--- a/07/0729.md
+++ b/07/0729.md
@@ -29,6 +29,21 @@
 工作完成。
 
 
+ **日学一git**
+ 
+ 删除远程库中的文件或者文件夹：
+ 
+ ```
+ git rm --cached <filename>
+ git rm --cached -r <dir_name>
+ git commit -m "Removed folder from repository"
+ git push origin master
+ ```
+ 
+ 1. 删除远程文件之后 
+ 2. 提交删除的信息
+ 3. push到远程库
+ 
 
 
 
