--- a/2016/0913.md
+++ b/2016/0913.md
@@ -1,2 +1,16 @@
-## 20160913 周二 晴 青岛 
+## 20160913 周二 晴 青岛
+
+### 上午
+
+1. 看电视
+2. 看书（黑客与画家） 
+
+### 下午
+
+1. 看书（黑客与画家）
+2. 即时部署jsp
+
+### 晚上
+
+1. 看2小时hibernate（对象映射，hibernate查询API 一部分）
 
