--- a/2016/0924.md
+++ b/2016/0924.md
@@ -12,6 +12,7 @@
 2. 讨论领导层裁员的问题
 	* 9月底裁员一个前端
 	* 10月底裁员一个Java
+	* 不过最后鹏鹏说他觉得没意思要了一个半月的补偿，准备9月底和静静一起走。所以现在结局成现在这个样子了。
 	
 	我的猜想是裁员只是为了保存一个技术团队吧，如果不是这样的话，可能到10月底就还会有一套说法。至于裁员的补偿问题。我还是第一次知道。（补偿了一个半月的工资）。
 	
