--- a/2016/1002.md
+++ b/2016/1002.md
@@ -1,1 +1,19 @@
 ## 20161002 周日  晴  上海
+
+### 上午
+
+妈妈也过来了，不过感觉身体不是很好。精神无精打采的。可能是坐车坐的头晕吧。
+早上起来去大姑那吃的饭。
+上午闲着没事，一起去超市转转买点东西。叔叔中午做的饭。
+我发现叔叔和大姑做的饭都很好吃，但是有味。有些还是有些油腻。不过真的是很美味。
+
+### 下午
+
+下午妈妈一直急着回去，可能是坐车坐的她身体有些受不了吧。
+
+### 晚上
+
+晚上我在叔叔那吃了晚饭，玩了一会我就回去了。
+
+其实爷爷的病真的对于家人来说是突然发生的事件。处理的很好，不过中间过程其实也有不当之处。当然不在身边怎么说都是不对。对于当事人爷爷的抢救等等。不了解具体细节，所以也就无法了解全部内容。不过病情应该没什么。过一段时间就会好，但是肯定对身体有损伤。希望爷爷健康长寿。
+
