--- a/2016/1007.md
+++ b/2016/1007.md
@@ -6,5 +6,9 @@
 
 ### 下午
 
-现在已经在动车上了，不过比上次好点的就是居然有位置可以写之前没写的日记，所以这不才是真正的苦逼吗？而且你还不知道什么时候笔记本会没电停机？想想就很可怕是吗？对的，就是这么可怕。 
+现在已经在动车上了，不过比上次好点的就是居然有位置可以写之前没写的日记，所以这不才是真正的苦逼吗？而且你还不知道什么时候笔记本会没电停机？想想就很可怕是吗？对的，就是这么可怕。
+
+### 晚上
+
+晚上11点30到了住处，大概收拾了一下，开始整理这几天凌乱的日记。 
 
