--- a/2016/1008.md
+++ b/2016/1008.md
@@ -2,5 +2,15 @@
 
 ### 上午
 
+看了中国新歌声总决赛。
+
+### 下午
+
+把东西搬到公司过来住。做了粥。
+
+### 晚上
+
+去了 __湄公河行动__ 电影，讲的大部分算是纪实性的内容，所以当做一个纪实片来看的话的确不错。看完觉得其实内容很大方面取决于有绝对权力部门的能力，如果能力大的话可以做所有的事，如果能力不大的话就可能会有所避讳。因为有比自己实力强的一方存在，会出现制衡现象。
+
  
 
