--- a/2016/1231.md
+++ b/2016/1231.md
@@ -2,3 +2,13 @@
 
 昨天得知这几天应该会回郑州办公。反正还可以吧。 
 
+一个字总结2016：虚。
+
+觉得什么都没完成，
+1，blog没有完成
+2，持续写文章没有完成
+3，持续学习新技术（只学习了新名词）
+
+2016已经过去了，2017继续努力，继续生活。加油
+
+
