补写日记，发现没有什么值得书写的

--- a/2017/0207.md
+++ b/2017/0207.md
@@ -9,5 +9,9 @@
 
 这几天在公司办公的感受就是比较冷，而且自己还有点轻微的感冒症状，不过我没吃药，觉得这些抵抗力就可以做到的。所以也没在意。多喝点热水。正常吃饭就可以了。
 
+
+吃过晚饭之后去了网吧做了一会，感觉很爽。至少很暖和。也撸一管了。
+
+妈妈在我上网的时候打电话给我说了说自己的情况。我也说了一些。主要是妈妈在那上班的事。我觉得还是去苏州上班划算。在上海不怎么划算。
  
 
