--- a/2017/0226.md
+++ b/2017/0226.md
@@ -3,5 +3,7 @@
 今天已经在上海了，上午去看望姑父。骑行了一段时间的共享单车。感觉挺好的。城市需要程度高，但是不适宜推广。
 
 姑父的病况越来越不乐观了，反正不怎么好。一直是有问题的。姑父自己看的很开，说是癌细胞已经扩散到肝，淋巴了。所以不治疗了，放化疗的话自己还痛苦。我在和姑父聊天的时候一直在想要怎么做才会是最好的。
-现实是你怎么做都不会好。这就是事实。大姑的心态和状况感觉不是很好。 
+现实是你怎么做都不会好。这就是事实。大姑的心态和状况感觉不是很好。
+
+下午做公交去我妈那给她送一个电话卡和衣服。反正衣服带过来了。什么都可以用。 
 
